Add methods to handle NaN values and analyze DataFrame quality in DataPreprocessor

--- a/notebooks/experiments.ipynb
+++ b/notebooks/experiments.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "72a1a215",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
        "4                  Libros         3.0  s b f h c g c h q j          0.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "f554e995",
    "metadata": {},
    "outputs": [
@@ -477,7 +477,7 @@
        "19                   Ropa   1.0  k h g y l w o b z v        0.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,6 +488,449 @@
     "data, mappings = DataPreprocessor.clean_columns(df)\n",
     "\n",
     "data.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b4aba8f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>transaction_id</th>\n",
+       "      <th>fech_registro</th>\n",
+       "      <th>nombre_cliente_raw</th>\n",
+       "      <th>monto</th>\n",
+       "      <th>categoría_productotipo</th>\n",
+       "      <th>score</th>\n",
+       "      <th>notes_comments</th>\n",
+       "      <th>es_fraude</th>\n",
+       "      <th>score_nan</th>\n",
+       "      <th>es_fraude_nan</th>\n",
+       "      <th>monto_nan</th>\n",
+       "      <th>fech_registro_nan</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2020-01-01 00:00:00</td>\n",
+       "      <td>Cliente_0</td>\n",
+       "      <td>380.79</td>\n",
+       "      <td>Hogar</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>q a h f t r x c k a</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2020-01-01 01:00:00</td>\n",
+       "      <td>Cliente_1</td>\n",
+       "      <td>$951.21</td>\n",
+       "      <td>Hogar</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>f n a f q o f p v a</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2020-01-01 02:00:00</td>\n",
+       "      <td>Cliente_2</td>\n",
+       "      <td>734.67</td>\n",
+       "      <td>Juguetes</td>\n",
+       "      <td>dos</td>\n",
+       "      <td>u s i e y i c c w p</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2020-01-01 03:00:00</td>\n",
+       "      <td>Cliente_3</td>\n",
+       "      <td>602.67</td>\n",
+       "      <td>Hogar</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>u s n z j o v q w p</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2020-01-01 04:00:00</td>\n",
+       "      <td>Cliente_4</td>\n",
+       "      <td>164.46</td>\n",
+       "      <td>Libros</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>s b f h c g c h q j</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2020-01-01 05:00:00</td>\n",
+       "      <td>Cliente_5</td>\n",
+       "      <td>164.43</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>j f g y q p e s e j</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2020-01-01 06:00:00</td>\n",
+       "      <td>Cliente_6</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>Libros</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>z q o r v u f a i g</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020-01-01 07:00:00</td>\n",
+       "      <td>Cliente_7</td>\n",
+       "      <td>867.51</td>\n",
+       "      <td>Hogar</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>f y w i r k x l g g</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2020-01-01 08:00:00</td>\n",
+       "      <td>Cliente_8</td>\n",
+       "      <td>605.1</td>\n",
+       "      <td>Libros</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>o g p x k f z n c b</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2020-01-01 09:00:00</td>\n",
+       "      <td>Cliente_9</td>\n",
+       "      <td>710.99</td>\n",
+       "      <td>Hogar</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>c q u k b j z n z w</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11.0</td>\n",
+       "      <td>2020-01-01 10:00:00</td>\n",
+       "      <td>Cliente_10</td>\n",
+       "      <td>30.38</td>\n",
+       "      <td>Hogar</td>\n",
+       "      <td>uno</td>\n",
+       "      <td>a s r n g q c l l y</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cliente_11</td>\n",
+       "      <td>$970.21</td>\n",
+       "      <td>Ropa</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>w g n e x w h q p d</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>2020-01-01 12:00:00</td>\n",
+       "      <td>Cliente_12</td>\n",
+       "      <td>$834.12</td>\n",
+       "      <td>Libros</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>t o u n a i a y w v</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>2020-01-01 13:00:00</td>\n",
+       "      <td>Cliente_13</td>\n",
+       "      <td>220.22</td>\n",
+       "      <td>Libros</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>h b w y c m b t t d</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020-01-01 14:00:00</td>\n",
+       "      <td>Cliente_14</td>\n",
+       "      <td>$190.01</td>\n",
+       "      <td>Libros</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>m o g w l f o s f i</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>2020-01-01 15:00:00</td>\n",
+       "      <td>Cliente_15</td>\n",
+       "      <td>191.57</td>\n",
+       "      <td>Electrónica</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>z q l n d f i p f f</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>2020-01-01 16:00:00</td>\n",
+       "      <td>Cliente_16</td>\n",
+       "      <td>311.2</td>\n",
+       "      <td>Hogar</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>b q f x w b g r f d</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>2020-01-01 17:00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>$529.51</td>\n",
+       "      <td>Libros</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>y o m u u e c l l m</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>19.0</td>\n",
+       "      <td>2020-01-01 18:00:00</td>\n",
+       "      <td>Cliente_18</td>\n",
+       "      <td>437.63</td>\n",
+       "      <td>Electrónica</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>s r z c k i w g e l</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2020-01-01 19:00:00</td>\n",
+       "      <td>Cliente_19</td>\n",
+       "      <td>298.32</td>\n",
+       "      <td>Ropa</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>k h g y l w o b z v</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    transaction_id        fech_registro nombre_cliente_raw    monto  \\\n",
+       "0              1.0  2020-01-01 00:00:00          Cliente_0   380.79   \n",
+       "1              2.0  2020-01-01 01:00:00          Cliente_1  $951.21   \n",
+       "2              3.0  2020-01-01 02:00:00          Cliente_2   734.67   \n",
+       "3              4.0  2020-01-01 03:00:00          Cliente_3   602.67   \n",
+       "4              5.0  2020-01-01 04:00:00          Cliente_4   164.46   \n",
+       "5              6.0  2020-01-01 05:00:00          Cliente_5   164.43   \n",
+       "6              7.0  2020-01-01 06:00:00          Cliente_6     67.5   \n",
+       "7              NaN  2020-01-01 07:00:00          Cliente_7   867.51   \n",
+       "8              9.0  2020-01-01 08:00:00          Cliente_8    605.1   \n",
+       "9             10.0  2020-01-01 09:00:00          Cliente_9   710.99   \n",
+       "10            11.0  2020-01-01 10:00:00         Cliente_10    30.38   \n",
+       "11            12.0                  NaN         Cliente_11  $970.21   \n",
+       "12            13.0  2020-01-01 12:00:00         Cliente_12  $834.12   \n",
+       "13            14.0  2020-01-01 13:00:00         Cliente_13   220.22   \n",
+       "14             NaN  2020-01-01 14:00:00         Cliente_14  $190.01   \n",
+       "15            16.0  2020-01-01 15:00:00         Cliente_15   191.57   \n",
+       "16            17.0  2020-01-01 16:00:00         Cliente_16    311.2   \n",
+       "17            18.0  2020-01-01 17:00:00                NaN  $529.51   \n",
+       "18            19.0  2020-01-01 18:00:00         Cliente_18   437.63   \n",
+       "19            20.0  2020-01-01 19:00:00         Cliente_19   298.32   \n",
+       "\n",
+       "   categoría_productotipo score       notes_comments  es_fraude  score_nan  \\\n",
+       "0                   Hogar   5.0  q a h f t r x c k a        0.0          0   \n",
+       "1                   Hogar   2.0  f n a f q o f p v a        0.0          0   \n",
+       "2                Juguetes   dos  u s i e y i c c w p        0.0          0   \n",
+       "3                   Hogar   4.0  u s n z j o v q w p        1.0          0   \n",
+       "4                  Libros   3.0  s b f h c g c h q j        0.0          0   \n",
+       "5                     NaN   1.0  j f g y q p e s e j        0.0          0   \n",
+       "6                  Libros   3.0  z q o r v u f a i g        NaN          0   \n",
+       "7                   Hogar   2.0  f y w i r k x l g g        0.0          0   \n",
+       "8                  Libros   5.0  o g p x k f z n c b        0.0          0   \n",
+       "9                   Hogar   1.0  c q u k b j z n z w        0.0          0   \n",
+       "10                  Hogar   uno  a s r n g q c l l y        0.0          0   \n",
+       "11                   Ropa   5.0  w g n e x w h q p d        0.0          0   \n",
+       "12                 Libros   1.0  t o u n a i a y w v        0.0          0   \n",
+       "13                 Libros   5.0  h b w y c m b t t d        0.0          0   \n",
+       "14                 Libros   1.0  m o g w l f o s f i        0.0          0   \n",
+       "15            Electrónica   3.0  z q l n d f i p f f        0.0          0   \n",
+       "16                  Hogar   NaN  b q f x w b g r f d        0.0          1   \n",
+       "17                 Libros   4.0  y o m u u e c l l m        0.0          0   \n",
+       "18            Electrónica   5.0  s r z c k i w g e l        0.0          0   \n",
+       "19                   Ropa   1.0  k h g y l w o b z v        0.0          0   \n",
+       "\n",
+       "    es_fraude_nan  monto_nan  fech_registro_nan  \n",
+       "0               0          0                  0  \n",
+       "1               0          0                  0  \n",
+       "2               0          0                  0  \n",
+       "3               0          0                  0  \n",
+       "4               0          0                  0  \n",
+       "5               0          0                  0  \n",
+       "6               1          0                  0  \n",
+       "7               0          0                  0  \n",
+       "8               0          0                  0  \n",
+       "9               0          0                  0  \n",
+       "10              0          0                  0  \n",
+       "11              0          0                  1  \n",
+       "12              0          0                  0  \n",
+       "13              0          0                  0  \n",
+       "14              0          0                  0  \n",
+       "15              0          0                  0  \n",
+       "16              0          0                  0  \n",
+       "17              0          0                  0  \n",
+       "18              0          0                  0  \n",
+       "19              0          0                  0  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = DataPreprocessor.add_null_flags(data, target_cols=['score', 'es_fraude', 'monto', 'fech_registro'])\n",
+    "data.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3665ede4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Analisis de calidad basado en la columna \"monto\":\n",
+      "- Columna 'monto' tiene 2.72% valores NaN (136 de 5000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "DataPreprocessor.analyze_quality(data, target_col='monto', threshold=0.05)"
    ]
   }
  ],
